# ota-common

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  idf_component.yml  library.json  library.properties  platformio.ini
.trunk/: trunk.yaml
docs/: guide.md
include/ota_common/: admin_key_verifier.h  detools_apply.h  esp_image.h  flash_target.h  manifest.h  merkle.h  ota_common.h  package.h  radio.h  sha256.h  signature.h  trailer.h  transport.h  xeddsa.h
src/: detools_apply.cpp  esp_image.cpp  merkle.cpp  package.cpp  sha256.cpp  trailer.cpp  transport.cpp  vendor_detools.c  vendor_heatshrink.c  vendor_tweetnacl.c  xeddsa.cpp
test/: test_helpers.h
test/test_detools/: test_detools.cpp
test/test_esp_image/: test_esp_image.cpp
test/test_fixtures/: test_fixtures.cpp
test/test_merkle/: test_merkle.cpp
test/test_package/: test_package.cpp
test/test_sha256/: test_sha256.cpp
test/test_trailer/: test_trailer.cpp
test/test_transport/: test_transport.cpp
test/test_xeddsa/: test_xeddsa.cpp
tools/: gen_fixtures.py  gen_xeddsa_fixtures.py  requirements.txt  run_tests.sh
tools/packager/: __init__.py  __main__.py  formats.py  merkle.py  package.py  sign.py  trailer_tool.py
tools/tests/: test_formats.py  test_merkle.py  test_package.py  test_sign.py
